[gd_scene load_steps=4 format=3 uid="uid://divq8yctpqm5i"]

[ext_resource type="Script" path="res://main.gd" id="1_nis8n"]
[ext_resource type="PackedScene" uid="uid://cokga2og55a2u" path="res://Mob.tscn" id="2_lyvm2"]

[sub_resource type="Curve2D" id="Curve2D_85m02"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 1080, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_nis8n")
mob_scene = ExtResource("2_lyvm2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1080.0
color = Color(0.478431, 0.803922, 0.933333, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_85m02")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
